--- a/Draw/Controller/Common/PassWordDialog.xib
+++ b/Draw/Controller/Common/PassWordDialog.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11D50d</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIButton</string>
@@ -43,8 +43,8 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="581645390">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{250, 235}</string>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{290, 235}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="239453552"/>
@@ -57,11 +57,10 @@
 							</object>
 							<object class="IBUIButton" id="857988017">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{158, 178}, {72, 37}}</string>
+								<int key="NSvFlags">283</int>
+								<string key="NSFrame">{{185, 178}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -88,8 +87,8 @@
 							</object>
 							<object class="IBUIButton" id="516909111">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 178}, {72, 37}}</string>
+								<int key="NSvFlags">286</int>
+								<string key="NSFrame">{{20, 178}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="857988017"/>
@@ -106,8 +105,8 @@
 							</object>
 							<object class="IBUITextField" id="349301112">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 50}, {210, 31}}</string>
+								<int key="NSvFlags">314</int>
+								<string key="NSFrame">{{20, 50}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="496652242"/>
@@ -145,8 +144,8 @@
 							</object>
 							<object class="IBUITextField" id="496652242">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 94}, {210, 31}}</string>
+								<int key="NSvFlags">314</int>
+								<string key="NSFrame">{{20, 94}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="697516897"/>
@@ -175,8 +174,8 @@
 							</object>
 							<object class="IBUITextField" id="697516897">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 138}, {210, 31}}</string>
+								<int key="NSvFlags">314</int>
+								<string key="NSFrame">{{20, 138}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="516909111"/>
@@ -205,8 +204,8 @@
 							</object>
 							<object class="IBUIButton" id="239453552">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{50, 11}, {150, 37}}</string>
+								<int key="NSvFlags">306</int>
+								<string key="NSFrame">{{50, 11}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="349301112"/>
@@ -229,7 +228,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{35, 20}, {250, 235}}</string>
+						<string key="NSFrame">{{15, 10}, {290, 235}}</string>
 						<reference key="NSSuperview" ref="409706297"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="581645390"/>
@@ -544,12 +543,16 @@
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1296" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">logout@2x.png</string>
 			<string key="NS.object.0">{607, 514}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
